miniextendr-macros/tests/ui/default_invalid_param_impl.stderr
error: defaults(...) references non-existent parameter(s): another, nonexistent
 --> tests/ui/default_invalid_param_impl.rs:9:19
  |
9 |     #[miniextendr(defaults(nonexistent = "42", another = "100"))]
  |                   ^^^^^^^^
